Make EscalationRequests have a start and end date

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require flexslider
  *= require jquery-ui
  *= require bootstrap/dist/css/bootstrap
+ *= require eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker
  *= require font-awesome
  *= require college_green/theme
  *= require college_green/styles-red
