--- a/app/views/admin/escalation_requests/index.haml
+++ b/app/views/admin/escalation_requests/index.haml
@@ -17,6 +17,8 @@
               %th Reviewer
               %th Status
               %th Created
+              %th Start
+              %th End
               %th Action
           %tbody
             - @escalation_requests.each_with_index do |request, index|
@@ -37,13 +39,21 @@
                   = time_ago_in_words(request.created_at)
                   ago
                 %td
-                  %a.btn.btn-sm.btn-success{href: admin_escalation_request_approve_path(request), data: {method: 'post'}}
+                  = request.escalation_start_at
+                %td
+                  = request.escalation_end_at
+                %td
+                  %a.btn.btn-xs.btn-success{href: admin_escalation_request_approve_path(request), data: {method: 'post'}}
                     %i.fa.fa-check
-                  %a.btn.btn-sm.btn-danger{href: admin_escalation_request_deny_path(request), data: {method: 'post'}}
+                  %a.btn.btn-xs.btn-danger{href: admin_escalation_request_deny_path(request), data: {method: 'post'}}
                     %i.fa.fa-times
+                  %a.btn.btn-xs.btn-primary{href: edit_admin_escalation_request_path(request, "#{request.escalatable.class.to_s.downcase}_id" => request.escalatable.id )}
+                    %i.fa.fa-gear
               %tr
                 %td.hiddenRow{colspan: "6"}
-                  .collapse{class: "more_info#{index}"}= request.note
+                  .collapse{class: "more_info#{index}"}
+                    %b Special Note:
+                    = request.note
               %tr
                 %td.hiddenRow{colspan: "6"}
                   .collapse{class: "more_info#{index}"}
