Fix git revisions for Dokku

--- a/app/views/partials/_footer.haml
+++ b/app/views/partials/_footer.haml
@@ -5,12 +5,8 @@
         %small.copyright.col-md-3.col-sm-12-col-xs-12
           =t('copyright', year: Time.now.year)
         .commit.col-md-6.col-sm-12-col-xs-12
-          - if current_user
-            %code
-              %a{href:"https://github.com/Syosset/Web/commit/#{@revision.sha}", target: "_blank"} #{@revision.sha[0..5]}
-          - else
-            %code #{@revision.sha[0..5]}
-          #{@revision.message}
+          %code
+            %a{href:"https://github.com/Syosset/Web/commit/#{@revision}", target: "_blank"} #{@revision[0..5]}
         %ul.social.pull-right.col-md-3.col-sm-12.col-xs-12
           %li
             %a{:href => "https://twitter.com/SyoStudentGov"}
