--- a/app/views/welcome/_announcements.haml
+++ b/app/views/welcome/_announcements.haml
@@ -1,6 +1,6 @@
 %section.news
   %h1.section-heading.text-highlight
-    %span.line Latest News
+    %span.line= link_to "Important Announcements", announcements_path
   .carousel-controls
     %a.prev{"data-slide" => "prev", :href => "#news-carousel"}
       %i.fa.fa-caret-left
