--- a/app/views/admin/departments/edit.haml
+++ b/app/views/admin/departments/edit.haml
@@ -8,4 +8,4 @@
   .container-fluid
     .row-fluid
       = render 'form'
-      = link_to 'Back',  departments_path, class: "btn btn-warning pull-right"
+      = link_to 'Back',  department_path(@department), class: "btn btn-warning pull-right"
