--- a/app/views/admin/announcements/_form.haml
+++ b/app/views/admin/announcements/_form.haml
@@ -5,5 +5,5 @@
     = f.text_field :name, placeholder: "Name", class: "form-control"
   .form-group
     = f.label :content
-    = f.text_area :content, placeholder: "Content", class: "tinymce", rows: 10, class: "form-control"
+    = f.text_area :content, placeholder: "Content", rows: 10, class: "form-control"
   = f.submit "Save", class: "btn btn-success pull-right", id: "submit-button"
