--- a/app/views/departments/show.haml
+++ b/app/views/departments/show.haml
@@ -11,8 +11,9 @@
   .page-content
     .row.page-row
       .courses-wrapper.col-md-8.col-sm-7
-        = @department.content.html_safe
-
+        = form_for [:admin, @department] do |f|
+          %div{class: "#{"editable-content" if current_holder.can? :edit, @department}", id: "department[content]"}
+            = @department.content.html_safe
       %aside.page-sidebar.col-md-3.col-md-offset-1.col-sm-4.col-sm-offset-1
         %section.widget.has-divider
           %h3.title
@@ -28,10 +29,9 @@
           %ul.rankable.list-group
             - @department.announcements.by_priority.limit(5).each do |announcement|
               = content_tag_for(:li, announcement, class: "list-group-item") do
-                - if user_signed_in? && current_user.can?(:edit, announcement)
+                - if current_holder.can?(:edit, announcement)
                   %i.handle.fa.fa-sort{"aria-hidden" => "true"}
                 = link_to announcement.name.truncate(38), announcement
-
         %section.widget.has-divider
           %h3.title
             %i.fa.fa-link
@@ -42,3 +42,5 @@
             %i.fa.fa-users
             Teachers
           %p Donec pulvinar arcu lacus, 20% vel aliquam libero scelerisque a.
+:javascript
+  init_tiny();
