--- a/app/views/welcome/_quicklinks.haml
+++ b/app/views/welcome/_quicklinks.haml
@@ -1,6 +1,7 @@
 %section.links
   %h1.section-heading.text-highlight
-    %span.line Quick Links
+    %span.line
+      = link_to "Quick Links", links_path
   .section-content
     %p
       %a{:href => "https://ic.syosset.k12.ny.us/"}
