Add principal's quote on about page

--- a/app/views/welcome/about.haml
+++ b/app/views/welcome/about.haml
@@ -13,6 +13,6 @@
           %p.people
             %span.name= t('.principal.name')
             %br/
-            %span.title Principle, Syosset High School
+            %span.title Principal, Syosset High School
 
         %p= t('.info.text')
