--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,4 +1,4 @@
-<%= link_to omniauth_authorize_path(resource_name, "google_oauth2"), class: "btn btn-primary" do %>
+<%= link_to user_google_oauth2_omniauth_authorize_path, class: "btn btn-primary" do %>
   <i class="fa fa-google" aria-hidden="true"></i>
   Sign in with your school Google account
 <% end %>
