--- a/app/views/departments/show.haml
+++ b/app/views/departments/show.haml
@@ -15,6 +15,13 @@
         = form_for [:admin, @department] do |f|
           %div{class: "#{"editable-content" if current_holder.can? :edit, @department}", id: "department[content]"}
             = @department.content.html_safe
+        - unless @department.courses.empty?
+          .container-fluid
+            %h3 Courses
+            %ul.nav.nav-pills.nav-stacked
+              - @department.courses.each do |course|
+                %li
+                  = link_to course.name, course
       %aside.page-sidebar.col-md-3.col-md-offset-1.col-sm-4.col-sm-offset-1
         %section.widget.has-divider
           %h3.title
