Shorten announcements header to fit on mobile

--- a/app/views/welcome/_announcements.haml
+++ b/app/views/welcome/_announcements.haml
@@ -1,7 +1,7 @@
 %section.news
   %h1.section-heading.text-highlight
     %span.line
-      = link_to "Important Announcements", announcements_path
+      = link_to t('.announcements'), announcements_path
       %small
         = link_to announcements_path do
           %i.fa.fa-ellipsis-v
