Update teacher email quicklink on front page

--- a/app/views/welcome/_quicklinks.haml
+++ b/app/views/welcome/_quicklinks.haml
@@ -12,7 +12,7 @@
         %i.fa.fa-graduation-cap
         Parent and Teacher Portal
     %p
-      %a{:href => "https://web.archive.org/web/20160802212722/https://webmail.syosset.k12.ny.us/owa/auth/logon.aspx?url=https://webmail.syosset.k12.ny.us/owa/&reason=0"}
+      %a{:href => "http://portal.office365.com/"}
         %i.fa.fa-envelope
         Teacher email
     %p
