--- a/app/views/partials/_navbar.haml
+++ b/app/views/partials/_navbar.haml
@@ -65,23 +65,19 @@
             - else
               %i.fa.fa-thumbs-up
               No school today
-
-        %li.nav-item.dropdown
-          %a.dropdown-toggle{"data-close-others" => "false", "data-delay" => "0", "data-hover" => "dropdown", "data-toggle" => "dropdown", :href => "#"}
-            - if user_signed_in?
+        - if user_signed_in?
+          %li.nav-item
+            %a
+              - if current_user.super_admin
+                %i.fa.fa-shield
               = current_user.name
-            - else
-              %i.fa.fa-user
-            %b.caret
-          %ul.dropdown-menu.dropdown-menu-right
-            - if user_signed_in?
-              %li
-                = link_to t('menu.account.sign_out'), destroy_user_session_path, :method => :delete
-            - else
-              %li
-                = link_to user_google_oauth2_omniauth_authorize_path do
-                  = t('menu.account.sign_in_with')
-                  %i.fa.fa-google-plus-square
+          %li.nav-item
+            = link_to t('menu.account.sign_out'), destroy_user_session_path, :method => :delete
+        - else
+          %li.nav-item
+            = link_to user_google_oauth2_omniauth_authorize_path do
+              = t('menu.account.sign_in_with')
+              %i.fa.fa-google-plus-square
         - if user_signed_in?
           %li.nav-item.dropdown
             %a.dropdown-toggle{"data-close-others" => "false", "data-delay" => "0", "data-hover" => "dropdown", "data-toggle" => "dropdown", :href => "#"}
