--- a/app/views/partials/_navbar.haml
+++ b/app/views/partials/_navbar.haml
@@ -44,13 +44,8 @@
             %li= link_to "All #{t('nav.departments')}", departments_path
             - @departments.each do |department|
               %li= link_to department.name, department
-        %li.nav-item.dropdown
-          %a.dropdown-toggle{"data-close-others" => "false", "data-delay" => "0", "data-hover" => "dropdown", "data-toggle" => "dropdown", :href => "#"}
-            = t('nav.extracurriculars')
-            %i.fa.fa-angle-down
-          %ul.dropdown-menu
-            %li= link_to "Coming soon", "#"
-            /%li= link_to "All #{t('nav.extracurriculars')}", "#"
+        %li.nav-item
+          = link_to t('nav.extracurriculars'), activities_path
 
         - if user_signed_in? && current_user.super_admin?
           %li.nav-item{class: active_controller('admin/base', 'index')}
