Add rich announcements

--- a/app/views/announcements/show.haml
+++ b/app/views/announcements/show.haml
@@ -8,4 +8,4 @@
     = render partial: "partials/modtools", locals: {actions: @actions}
   .page-content
     .row-fluid.page-row
-      = @announcement.content
+      = @announcement.content.html_safe
