Add peek for administrators

--- a/app/views/partials/_navbar.haml
+++ b/app/views/partials/_navbar.haml
@@ -91,3 +91,4 @@
               - if @alert_count == 0
                 %li
                   %a{href: ""} No unread alerts!
+  = render 'peek/bar'
