Fix peek bar positioning

--- a/app/views/partials/_navbar.haml
+++ b/app/views/partials/_navbar.haml
@@ -91,4 +91,6 @@
               - if @alert_count == 0
                 %li
                   %a{href: ""} No unread alerts!
-  = render 'peek/bar'
+  .peek-container
+    .container
+      = render 'peek/bar'
