--- a/app/views/departments/show.haml
+++ b/app/views/departments/show.haml
@@ -17,11 +17,12 @@
             = @department.content.html_safe
         - unless @department.courses.empty?
           %h3 Courses
+          %input.course-search.form-control{type: 'text', placeholder: 'Search courses'}
           %hr
-          - @department.courses.in_groups_of(4).each do |courses|
+          - @department.courses.in_groups_of(4).each_with_index do |courses, index|
             .row
               - courses.compact.each do |course|
-                .col-xs-6.col-md-3
+                .col-xs-6.col-md-3.course{data: {name: course.name}, class: index >= 2 ? 'hidden' : ''}
                   = link_to course.name.truncate(50), course, class: "thumbnail"
       %aside.page-sidebar.col-md-3.col-md-offset-1.col-sm-4.col-sm-offset-1
         %section.widget.has-divider
