--- a/app/views/courses/index.haml
+++ b/app/views/courses/index.haml
@@ -18,3 +18,4 @@
             = content_tag_for(:tr, course) do
               %td= link_to course.name, course
               %td= course.short_description
+    = paginate @courses, theme: 'tb3'
