--- a/app/views/admin/base/index.haml
+++ b/app/views/admin/base/index.haml
@@ -1,1 +1,2 @@
 = link_to "View Escalation Requests", admin_escalation_requests_path, class: "btn btn-info"
+= link_to "Manage Users", admin_users_path, class: "btn btn-info"
