--- a/app/views/admin/users/index.haml
+++ b/app/views/admin/users/index.haml
@@ -14,7 +14,7 @@
               %td
                 = link_to user.name, edit_admin_user_path(user)
                 &nbsp;
-                - if current_user.super_admin
+                - if user.super_admin
                   %i.fa.fa-shield
               %td= user.email
     = paginate @users, theme: 'tb3'
