Add course id field

--- a/app/views/admin/courses/_form.haml
+++ b/app/views/admin/courses/_form.haml
@@ -3,6 +3,9 @@
     = f.label :name
     = f.text_field :name, placeholder: "Name", class: "form-control"
   .form-group
+    = f.label :course_id
+    = f.text_field :course_id, placeholder: "Course ID", class: "form-control"
+  .form-group
     = f.label :short_description
     = f.text_field :short_description, placeholder: "Short Description", class: "form-control"
   .form-group
