--- a/app/views/courses/show.haml
+++ b/app/views/courses/show.haml
@@ -1,6 +1,7 @@
 .page-wrapper
   %header.page-heading.clearfix
     %h1.heading-title.pull-left
+      %span.text-muted= "##{@course.course_id}"
       = @course.name
       %small
         - department = @course.department
