--- a/app/views/departments/show.haml
+++ b/app/views/departments/show.haml
@@ -22,7 +22,7 @@
           - @department.courses.in_groups_of(4).each_with_index do |courses, index|
             .row
               - courses.compact.each do |course|
-                .col-xs-6.col-md-3.course{data: {name: course.name}, class: index >= 2 ? 'hidden' : ''}
+                .col-xs-6.col-md-3.course{data: {name: course.name, course_id: course.course_id}, class: index >= 2 ? 'hidden' : ''}
                   = link_to course.name.truncate(50), course, class: "thumbnail"
       %aside.page-sidebar.col-md-3.col-md-offset-1.col-sm-4.col-sm-offset-1
         %section.widget.has-divider
