Update footer and peek bar

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -17,14 +17,13 @@
 .footer .copyright {
   float: left;
   margin-right: 15px;
+  font-size: 15px !important;
 }
-.footer .commit {
-  padding: 0px;
-  font-size: 11px;
-  color: #dcdcdc;
-  line-height: 3;
-  float: left;
+
+.footer a {
+  color: #ff4949;
 }
+
 .hiddenRow { // Collapsing tables
     padding: 0 !important;
 }
