Change red color of theme

--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -20,7 +20,7 @@
 }
 
 #peek {
-  background: #653444 !important;
+  background: #842a2a !important;
   color: white;
 }
 
@@ -29,6 +29,6 @@
 }
 
 .peek-container {
-  background: #653444;
+  background: #842a2a;
   width: 100%;
 }
