--- a/app/views/admin/courses/_form.haml
+++ b/app/views/admin/courses/_form.haml
@@ -1,10 +1,12 @@
+= errors_for(@course)
+
 = form_for [:admin, @department, @course] do |f|
   .form-group
     = f.label :name
     = f.text_field :name, placeholder: "Name", class: "form-control"
   .form-group
     = f.label :course_id
-    = f.text_field :course_id, placeholder: "Course ID", class: "form-control"
+    = f.number_field :course_id, placeholder: "Course ID", class: "form-control"
   .form-group
     = f.label :short_description
     = f.text_field :short_description, placeholder: "Short Description", class: "form-control"
