--- a/app/views/departments/index.haml
+++ b/app/views/departments/index.haml
@@ -7,12 +7,16 @@
       %table.table
         %thead
           %tr
+            %th
             %th Department Name
             %th Description
             %th Phone Number
-        %tbody
+        %tbody.rankable
           - @departments.each do |department|
-            %tr
+            = content_tag_for(:tr, department) do
+              %td
+                - if current_holder.can?(:rank, :departments)
+                  %i.handle.fa.fa-sort{"aria-hidden" => "true"}
               %td= link_to department.name, department
               %td= department.short_description
               %td= department.phone
