Implement mongoid_search for departments, courses and activities

--- a/app/views/activities/index.haml
+++ b/app/views/activities/index.haml
@@ -1,7 +1,16 @@
 .page-wrapper
   %header.page-heading.clearfix
-    %h1.heading-title.pull-left Activities
-    = render partial: "partials/modtools", locals: {actions: @actions}
+    .row
+      .col-xs-12.col-sm-5
+        %h1.heading-title.pull-left Activities
+      .col-xs-12.col-sm-7
+        = form_tag activities_path, method: :get do
+          .input-group
+            %input#search.form-control{:placeholder => "Search for Activity", :type => "text", name: "search"}
+            %span.input-group-btn
+              = submit_tag "Search", :name => nil, class: "btn btn-default"
+    .row
+      = render partial: "partials/modtools", locals: {actions: @actions}
   .page-content
     .alert.alert-info{:role => "alert"}
       %strong Want to add your club/group/sport?
