--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -43,12 +43,11 @@
   color: gray;
 }
 
-#error_explanation {
-  color: #f00;
-  ul {
-    list-style: none;
-    margin: 0 0 18px 0;
-  }
+.pagination {
+    display: inline-block;
+    padding-left: 0;
+    margin: 1px 0;
+    border-radius: 4px;
 }
 
 // @extend won't see bootstrap's given selectors...
