--- a/app/views/departments/index.haml
+++ b/app/views/departments/index.haml
@@ -1,7 +1,16 @@
 .page-wrapper
   %header.page-heading.clearfix
-    %h1.heading-title.pull-left Departments
-    = render partial: "partials/modtools", locals: {actions: @actions}
+    .row
+      .col-xs-12.col-sm-5
+        %h1.heading-title.pull-left Departments
+      .col-xs-12.col-sm-7
+        = form_tag departments_path, method: :get do
+          .input-group
+            %input#search.form-control{:placeholder => "Search for Department", :type => "text", name: "search"}
+            %span.input-group-btn
+              = submit_tag "Search", :name => nil, class: "btn btn-default"
+    .row
+      = render partial: "partials/modtools", locals: {actions: @actions}
   .page-content
     .table-responsive
       %table.table
