--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -1,3 +1,7 @@
+.navbar-header {
+  display: flex;
+}
+
 @media (min-width: 576px) {
   .red-white-display {
       border: 2px solid #dce7f0;
@@ -10,11 +14,11 @@
 
 .day-indicator-container {
   position: relative;
-  float: left;
   padding: 9px 10px;
   margin-top: 8px;
   margin-right: 15px;
   margin-bottom: 8px;
+  flex: 1;
 }
 
 .day-indicator-container a {
