Fix footer, make Peek prettier, remove useless home and contact buttons

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -46,7 +46,7 @@
 }
 
 #peek {
-  background: #842a2a !important;
+  background: #43232d !important;
   color: white;
 }
 
@@ -55,7 +55,7 @@
 }
 
 .peek-container {
-  background: #842a2a;
+  background: #43232d;
   width: 100%;
 }
 
