--- a/app/views/partials/_footer.haml
+++ b/app/views/partials/_footer.haml
@@ -1,19 +1,17 @@
 %footer.footer
-  .bottom-bar
-    .container
-      .col-7
-        %small.copyright.row
-          Made by
-          = link_to "Neil Johari", "https://github.com/neiljohari/"
-          and
-          = link_to "Kailan Blanks", "https://github.com/kailan/"
-      %ul.social.col-5
-        %li.text-primary
-          %a{:href => "https://twitter.com/SyoStudentGov"}
-            %i.fa.fa-twitter
-        %li
-          %a{:href => "https://www.facebook.com/search/top/?q=Syosset%20High%20School"}
-            %i.fa.fa-facebook
-        %li
-          %a{:href => "https://github.com/Syosset/Web"}
-            %i.fa.fa-github
+  .container
+    %small.copyright
+      Made by
+      = link_to "Neil Johari", "https://github.com/neiljohari/"
+      and
+      = link_to "Kailan Blanks", "https://github.com/kailan/"
+    %ul.social
+      %li.text-primary
+        %a{:href => "https://twitter.com/SyoStudentGov"}
+          %i.fa.fa-twitter
+      %li
+        %a{:href => "https://www.facebook.com/search/top/?q=Syosset%20High%20School"}
+          %i.fa.fa-facebook
+      %li
+        %a{:href => "https://github.com/Syosset/Web"}
+          %i.fa.fa-github
