--- a/app/views/partials/_navbar.haml
+++ b/app/views/partials/_navbar.haml
@@ -53,7 +53,7 @@
             = render "partials/nav/day_indicator"
         - if user_signed_in?
           %li.nav-item
-            %a
+            = link_to user_path(current_user) do
               - if current_user.super_admin
                 %i.fa.fa-shield
               = current_user.name
